# mtrand-hs

./: CHANGELOG.md  LICENSE  MTRand.hs  README.md  mtrand64.cabal
src/System/Random/: MT64.hs
